--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "mumaker": "^2.0.0",
     "mysql2": "^3.16.0",
     "node-cache": "^5.1.2",
+    "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
     "node-id3": "^0.2.3",
     "node-webpmux": "^3.1.0",
