--- a/package.json
+++ b/package.json
@@ -23,8 +23,16 @@
     "install:force": "npm install --force",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [ "termux-whatsapp-bot", "whatsapp-bot", "whatsapp-api",
-    "baileys-bot", "whatsApp", "mega-bot", "mega-md", "multi-device", "mega-ai"
+  "keywords": [
+    "termux-whatsapp-bot",
+    "whatsapp-bot",
+    "whatsapp-api",
+    "baileys-bot",
+    "whatsApp",
+    "mega-bot",
+    "mega-md",
+    "multi-device",
+    "mega-ai"
   ],
   "homepage": "https://github.com/macksyn/HEDRA-AI",
   "repository": {
